# cortex-bio

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  docker-compose.yaml  fly.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
api/: .env.example  Dockerfile  README.md  package-lock.json  package.json
api/scripts/: create-api-key.ts  isolation-audit.ts
api/src/: config.ts  index.ts
dashboard/: package.json
dashboard/app/: page.tsx
db/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
db/prisma/: schema.prisma  seed.ts
db/sql/: example-queries.sql  retention.sql  views.sql
docs/: API.md  LAUNCH.md  LAUNCH_CHECKLIST.md  OPEN_SOURCE.md  README.md  RESEARCH.md
docs/screenshots/: README.md
frontend/: .env.example  DEPLOYMENT.md  LAUNCH_CLOUDFLARE.md  cloudflare-pages.config.ts  package-lock.json  wrangler.toml
frontend/.lovable/: plan.md
frontend/public/: _headers  _redirects
frontend/src/: routeTree.gen.ts  styles.css
frontend/supabase/: config.toml
ios/: README.md
ml/: evaluate.py  requirements.txt  train.py
playground/: index.html
scripts/: deploy-frontend.sh  github-setup.sh  init-standalone-repo.sh  launch-all.sh  security-audit.sh
sdk/: README.md
sdk/python/: README.md  pyproject.toml
sdk/python/cortexbio/: __init__.py  client.py
website/: README.md  index.html  ops.html  vercel.json
(+148 files in other folders)
