[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cortexbio"
version = "0.1.0"
description = "Python SDK for the Cortex Bio Wearable Intelligence API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = ["httpx>=0.27.0"]
keywords = ["cortex-bio", "wearable", "readiness", "chronotype"]

[project.urls]
Homepage = "https://github.com/atriveo/cortex-bio"
Repository = "https://github.com/atriveo/cortex-bio"

[tool.setuptools.packages.find]
where = ["."]
include = ["cortexbio*"]
